# dropout-universality-experiments

./: .gitignore  CITATION.cff  LICENSE  README.md  environment.yml  pyproject.toml  requirements-dev.txt  requirements.txt
notebooks/mean_field/: meanfield_dropout_criticality.ipynb
notebooks/mlp/: mlp_dropout_budget_controls.ipynb  mlp_dropout_scheduling_overfit.ipynb
notebooks/sweeps/: gelu_h_sweep.ipynb  relu_h_sweep.ipynb  relu_width_sweep.ipynb
notebooks/transformer/: vit_cifar100_dropout_scheduling.ipynb  vit_component_ablation.ipynb
results/mlp/: dropout_MLP_triple.npz  dropout_MLP_triple.pkl  dropout_experiment_results.npz  dropout_experiment_results.pkl
results/sweeps/: gelu_h_bar_sweep_results.npz  gelu_h_bar_sweep_results.pkl  h_bar_sweep_results.npz  h_bar_sweep_results.pkl  width_sweep_results.npz  width_sweep_results.pkl
results/transformer/: ablation_results.json  vit_dropout_results.json
scripts/: make_figures.py  make_regularization_reach_figure.py
src/dropout_mft/: __init__.py  numerics.py  paths.py  plotting.py  results.py  schedules.py  style.py
tests/: test_numerics.py  test_results.py  test_schedules.py
