[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dropout-universality-experiments"
version = "0.1.0"
description = "Mean-field dropout scaling-law utilities and experiment reproduction scripts."
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { text = "MIT" }
authors = [
  { name = "Lucas Fernandez Sarmiento" }
]
dependencies = [
  "numpy==1.24.3",
  "matplotlib==3.7.1",
  "scipy==1.10.1",
  "torch==2.1.0",
  "torchvision==0.16.0",
  "tqdm==4.65.0",
  "wandb==0.24.2",
]

[project.urls]
Paper = "https://arxiv.org/abs/2605.21648"
Repository = "https://github.com/luklacasito/dropout-universality-experiments"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
